--- a/public/index.html
+++ b/public/index.html
@@ -26,7 +26,7 @@
     -->
   <script
     src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDN46Q5BVfXgArF54AqYuwzTbrjhtXJGb8&libraries=places"></script>
-  <title>React App</title>
+  <title>Pedais</title>
 </head>
 
 <body>
